import { sql } from 'drizzle-orm';
import { relations } from 'drizzle-orm/_relations';
import {
  index,
  pgTable,
  primaryKey,
  text,
  uuid,
  varchar,
} from 'drizzle-orm/pg-core';

import { autoId, serviceRolePolicies, timestamps } from '../../helpers';
import { accessRoles } from './access.sql';
import { authUsers } from './authUsers.sql';
import { organizations } from './organizations.sql';
import { users } from './users.sql';

export const organizationUsers = pgTable(
  'organization_users',
  {
    id: autoId().primaryKey(),
    // TODO: it should be the user id instead of authUserId
    authUserId: uuid()
      .notNull()
      .references(() => authUsers.id, {
        onDelete: 'cascade',
        onUpdate: 'cascade',
      }),
    name: varchar({ length: 256 }),
    email: varchar().notNull(),
    about: text(),
    organizationId: uuid()
      .references(() => organizations.id, {
        onDelete: 'cascade',
        onUpdate: 'cascade',
      })
      .notNull(),
    ...timestamps,
  },
  (table) => [
    ...serviceRolePolicies,
    index().on(table.id).concurrently(),
    index().on(table.email).concurrently(),
    index('organizationUsers_email_gin_index')
      .using('gin', sql`to_tsvector('english', ${table.email})`)
      .concurrently(),
    index('organizationUsers_organizations_idx')
      .on(table.organizationId)
      .concurrently(),
    index('organizationUsers_auth_user_id_idx')
      .on(table.authUserId)
      .concurrently(),
  ],
);

export const organizationUsersRelations = relations(
  organizationUsers,
  ({ one, many }) => ({
    serviceUser: one(users, {
      fields: [organizationUsers.authUserId],
      references: [users.authUserId],
    }),
    organization: one(organizations, {
      fields: [organizationUsers.organizationId],
      references: [organizations.id],
    }),
    roles: many(organizationUserToAccessRoles),
  }),
);

export const organizationUserToAccessRoles = pgTable(
  'organizationUser_to_access_roles',
  {
    organizationUserId: uuid()
      .notNull()
      .references(() => organizationUsers.id, {
        onDelete: 'cascade',
      }),
    accessRoleId: uuid()
      .notNull()
      .references(() => accessRoles.id, {
        onDelete: 'cascade',
      }),
    ...timestamps,
  },
  (table) => [
    ...serviceRolePolicies,
    primaryKey({ columns: [table.organizationUserId, table.accessRoleId] }),
    index('organizationUser_to_access_roles_org_user_idx')
      .on(table.organizationUserId)
      .concurrently(),
    index('organizationUser_to_access_roles_role_idx')
      .on(table.accessRoleId)
      .concurrently(),
  ],
);

export const organizationUserToAccessRolesRelations = relations(
  organizationUserToAccessRoles,
  ({ one }) => ({
    organizationUser: one(organizationUsers, {
      fields: [organizationUserToAccessRoles.organizationUserId],
      references: [organizationUsers.id],
    }),
    accessRole: one(accessRoles, {
      fields: [organizationUserToAccessRoles.accessRoleId],
      references: [accessRoles.id],
    }),
  }),
);

export type OrganizationUser = typeof organizationUsers.$inferSelect;
